chore(account): fixed amount input cursos jumping to the end on keystroke

--- a/src/components/Account/AccountTransaction/AccountTxPanel.scss
+++ b/src/components/Account/AccountTransaction/AccountTxPanel.scss
@@ -52,4 +52,11 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+  .Icons {
+    margin-right: 7px;
+  }
+  .Buttons {
+    margin-top: 7px;
+  }
 }
